2011-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-barf-unless-okay): Return the value of
	`tramp-send-command-and-check' if there is no error.
	(tramp-send-command-and-read): Suppress *all* errors if NOERROR.

2011-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Avoid recursive loading.
	(Bug#9114)

2011-07-14  Chong Yidong  <cyd@stupidchicken.com>

	* tramp-cmds.el (tramp-append-tramp-buffers): Revert to using
	switch-to-buffer.

	* tramp-compat.el (tramp-compat-pop-to-buffer-same-window): Deleted.

2011-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-start-file-process): Use a
	human-friendly prompt.

2011-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-pop-to-buffer-same-window): New defun.
	* tramp-cmds.el (tramp-append-tramp-buffers): Use it.

2011-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-cmds.el (tramp-append-tramp-buffers): Fix some uses of
	switch-to-buffer.

2011-07-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-cleanup-this-connection): New command.

	* tramp-sh.el (tramp-color-escape-sequence-regexp): New defconst.
	(tramp-sh-handle-insert-directory, tramp-convert-file-attributes):
	Use it.
	(tramp-remote-path): Add "/bin" and "/usr/bin".  On busyboxes,
	`tramp-default-remote-path' does not exist.
	(tramp-send-command-and-read): New optional argument NOERROR.
	(tramp-open-connection-setup-interactive-shell)
	(tramp-get-remote-path, tramp-get-remote-stat): Use it.
	(tramp-get-remote-readlink): Do not mask with `ignore-errors'.
	(tramp-process-sentinel): Flush also process' connection property.
	(tramp-sh-handle-start-file-process): Do not set process
	sentinel.  It is done now ...
	(tramp-maybe-open-connection): ... here.  (Bug#8929)

2011-07-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-encoding-command-interactive): New defcustom.
